[tool.poetry]
name = "pyraptor"
version = "1.3.3"
description = "Journey planner with RAPTOR algorithm"
authors = ["Leo van der Meulen, Thom Hopmans"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lmeulen/pyraptor"
repository = "https://github.com/lmeulen/pyraptor"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"
pandas = "^1.4.0"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-cov = "^2.10.1"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyraptor/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"